site/css/clmBook.css
/* ... */
li p {
	padding-bottom:0px;
	line-height:17px;	
}
ul > li {
	color: #555;
	line-height:28px;
	font-size:17px;
}
ul > li > *{
	color: #555;
}
a, a:active, a:focus {
	color: #2476C3;
	outline: 0;
	text-decoration:none;
}
a:hover {
	color: #17558e;
	text-decoration:underline;	
}
a:visited {
	color: #17558e;	
}

h1, h2, h3, h4, h5, h6 {
	font-family: "ProximaNovaSemibold", "ProximaNovaRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
	text-shadow: 0px 1px 0px white;
	border:0px;
	color: #444444;
}
h3 {
	float:none;	
}
/* h4 {
	font-family: Helvetica, Arial, sans-serif;
	font-size: 14.5px;
	margin-bottom: 0;
	color: #333333;
} */

em {
	color:#0b9743;	
}
dt {
  	font-family: "ProximaNovaSemibold", "ProximaNovaRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
	text-shadow: 0px 1px 0px white;
	font-size:19px;
	line-height: 23px;
	color: #333333;
	padding-top:0px;
}

dt .section {
	padding-top:10px;
	margin-top:0px;	
}

dt .chapter {
	padding-top:10px;	
}

dt .chapter a {
	line-height:21px;
	padding:0px;
	margin:0px;	
}

dt .section a {
	font-size:15px;
	line-height:19px;
	padding-top:0px;
	padding-bottom:0px;
	padding-left:20px;
}

dt .section a:hover {
	text-decoration:underline;	
}

dt .section a:visited {
	color: #17558e;
}

dd {
	line-height:23px;
	text-shadow: 0px 1px 0px white;
	padding-top:0px;
	padding-bottom:0px;
	margin-left:0px;
	padding-left:10px;
}

dl {
	padding-bottom:0px;	
}

.list-of-figures dt {
	font-size:15px;	
}

strong {
	color: #444444;
}

hr {
	display:none;	
}

.img {
	text-align:left;	
	padding-top:10px;
}

/* --- Body links --- */

.content a, .content a:active, .content a:focus {
	color: #2476C3;
	outline: 0;
	text-decoration:none;
}
.content a:hover {
	color: #17558e;
	text-decoration:underline;	
}
.content a:visited {
	color: #17558e;	
}

/* --- Fix for img alignment issues --- */

div.imageblock div.content {
    padding-left: 0px;
    margin-left: 0px;
    margin-top: 20px;
}

/* --- Img Description --- */

p.title {
	padding-top:10px;	
}
p.title strong {
	font-size:15px;
	font-weight:normal;
	color:#666666;	
}

br.figure-break {
	display:none;	
}

/* --- Title Heading Styling --- */

div.title, caption.title {
	font-family: "ProximaNovaSemibold", "ProximaNovaRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
	text-shadow: 0px 1px 0px white;
	color: #36424e;
	font-size:20px;
	font-weight: bold;
	text-align: left;
	padding-top: 20px;
	margin-bottom: 0.5em;
}
div.title + * {
	margin-top: 10px;
}

td div.title:first-child {
	margin-top: 0.0em;
}
div.content div.title:first-child {
	margin-top: 0.0em;
}
div.content + div.title {
	margin-top: 0.0em;
}

/* --- NAVBAR --- */

.navbar .brand {
    margin-left: 0px;
    white-space: nowrap;
}

.navbar .company {
	margin-left:10px;	
	line-height:26px;
	color:#666;	
}

.navbar .book-title {
	margin-left:20px;
	padding-left:20px;
	border-left:1px solid #ccc;	
	color:#666;
}
.navbar-inner {
	min-height:40px;
	padding-right:20px;
	padding-left:20px;
	padding-bottom:5px;
	background-color:#fafafa;
	background-image:linear-gradient(tobottom,#fff,#f2f2f2);
	background-repeat:repeat-x;
	border:1px solid #d4d4d4;
	-webkit-border-radius:4px;
	-moz-border-radius:4px;
	border-radius:4px;
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff',endColorstr='#fff2f2f2',GradientType=0);
	zoom:1;
	-webkit-box-shadow:0 1px 4px rgba(0,0,0,0.065);
	-moz-box-shadow:0 1px 4px rgba(0,0,0,0.065);
	box-shadow:0 1px 4px rgba(0,0,0,0.065);
}
.navbar .brand {
	padding: 10px 25px 10px 0;
}
.header-centered {
    text-align: center;
}

/* --- Sub Nav Styling --- */

#nav-sub-block {
  	margin: 0px;
  	padding: 0px;
  	padding-top: 10px;
  	padding-bottom: 0px;
}

ul#nav-sub  {
  	margin: 0px;
  	padding: 0px;
  	text-align:center;
}

ul#nav-sub li {
  	text-align: center;
  	list-style-type: none;
  	display: inline-block;
  	font-size:13px;
}

ul#nav-sub li.first {
	float:left;	
}
ul#nav-sub li.last {
	float:right;	
}

/* --- Search Box Styling --- */
.search-box {
	float:right;
	width:400px;
	margin-top:6px;
	height:20px;
}
textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
    background-color: #FFF;
    border: 1px solid #CCC;
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset;
    transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
    margin-top: 5px;
    margin-bottom: 0px;
}
form.gsc-search-box {
    font-size: 13px;
    margin: 0px;
    width: 200px;
}
table.gsc-search-box {
    border-style: none;
    border-width: 0px;
    border-spacing: 0px;
    width: 200px;
    margin-bottom: 2px;
    margin-top: 5px;
}
td.gsc-input {
	width:200px;	
}
.gsc-search-box-tools .gsc-search-box .gsc-input {
    padding-right: 1px;
}
.gsc-input-box {
    border: 1px solid #D9D9D9;
    background: none repeat scroll 0% 0% #FFF;
    height: 26px;
    margin-top: 2px;
}
.gsc-input input[type="text"] {
	box-shadow: none;
	transition: none;	
}
.gsc-input input[type="text"]:focus {
	box-shadow: none;
}
.gsst_a .gscb_a {
    color: #ccc;
    cursor: pointer;
}
form.gsc-search-box td {
    font-size: 11px;
}
input.gsc-search-button, input.gsc-search-button:hover, input.gsc-search-button:focus {
    border-color: #17558E;
    background-color: #2476C3;
    background-image: none;
    filter: none;
    padding: 6px 27px;
}
.cse .gsc-search-button input.gsc-search-button-v2, input.gsc-search-button-v2 {
    width: 13px;
    height: 13px;
    padding: 6px 27px;
    min-width: 13px;
    margin-top: 2px;
}
/* ... */

